2011-04-05  SAncho Lerena <slerena@artica.es>

	* operation/projects/project_download_file.php: Fixed
	broken download attachment on projects.

2011-04-05  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pData.class.php
	include/graphs/pChart/pDraw.class.php: Added new 
	features to the pChart library as the border colours
	customization in the border colors and selective
	avoidation of ticks

2011-03-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pDraw.class.php: Fixed typo
	and forgotten changes from last commit

2011-03-30  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pDraw.class.php: Fixed 
	a pchart bug in the ForceTransparency attribute
	into the pChart library

2011-03-29  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/fgraph.php: added multigraph support 
	to vertical graphs and area graphs to fgraph file

2011-03-29  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/fgraph.php: Fixed typo in 2d 
	flash pie chart call

2011-03-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/functions_html.php
	include/graphs
	include/graphs/functions_pchart.php
	include/graphs/pChart
	include/graphs/pChart/pScatter.class.php
	include/graphs/pChart/palettes
	include/graphs/pChart/palettes/spring.color
	include/graphs/pChart/palettes/shade.color
	include/graphs/pChart/palettes/kitchen.color
	include/graphs/pChart/palettes/light.color
	include/graphs/pChart/palettes/summer.color
	include/graphs/pChart/palettes/blind.color
	include/graphs/pChart/palettes/autumn.color
	include/graphs/pChart/palettes/evening.color
	include/graphs/pChart/palettes/navy.color
	include/graphs/pChart/pData.class.php
	include/graphs/pChart/pBarcode39.class.php
	include/graphs/pChart/pPie.class.php
	include/graphs/pChart/fonts
	include/graphs/pChart/fonts/calibri.ttf
	include/graphs/pChart/fonts/GeosansLight.ttf